# Sorts__algorithms

./: .gitignore  .gitmodules  CMakeLists.txt  graw.ipynb  main.cpp  test.cpp  work.cpp
data_base/: bubble_random.csv  bubble_reserved.csv  bubble_sort.csv  cocktail_random.csv  cocktail_reserved.csv  cocktail_sort.csv  comb_random.csv  comb_reserved.csv  heap_random.csv  heap_reserved.csv  heap_sort.csv  insert_random.csv  insert_reserved.csv  insert_sort.csv  quick_random.csv  quick_reserved.csv  quick_sort.csv  select_random.csv  select_reserved.csv  select_sort.csv  shell_random.csv  shell_reserved.csv  shell_sort.csv
include/: Sorts.cpp  a.out  sort.hh  sorts_2.hh
src/: list.cc  sort.cc  sorts_2.cc
